fix focus aligning

--- a/styles/style.css
+++ b/styles/style.css
@@ -110,7 +110,8 @@
   cursor: pointer;
 }
 
-.header__title {
+.header__title,
+.footer__title {
   box-sizing: border-box;
   color: var(--title-font-color);
   text-shadow: 4px 4px 0px var(--accent-color);
@@ -292,9 +293,13 @@
     --padding: 20px;
   }
 
+  .header__title,
+  .footer__title {
+    font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+  }
+
   .header__title {
     margin-left: -20px;
-    font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
   }
 
   .galery {
